--- a/global-serverless/web/index.html
+++ b/global-serverless/web/index.html
@@ -36,13 +36,16 @@
     <div class="main">
       <div class="title">
 
-        <a href="https://dynamodbworkshop.s3.amazonaws.com/index.html" class="titlelink">Global Serverless Workshop</a>
+        <a href="https://dynamodbworkshop.s3.amazonaws.com/global-serverless/index.html" class="titlelink">Global Serverless Workshop</a>
 <!--        <a href="http://dynamodbworkshop.s3-website-us-east-1.amazonaws.com/global-serverless/">SWS</a>-->
            &nbsp;&nbsp;
            <button id="addAPI" onClick="setCookie(prompt('Please enter the URL for your API Gateway', ''))">Add API</button>
 
-            <button id="sampleAPI1" onClick="setCookie(prompt('Sample API 1', 'https://osswul9dje.execute-api.us-west-2.amazonaws.com/api/'))">Sample API 1</button>
-            <button id="sampleAPI2" onClick="setCookie(prompt('Sample API 2', 'https://ue5621fb06.execute-api.us-east-2.amazonaws.com/api/'))">Sample API 2</button>
+          &nbsp;&nbsp;&nbsp;&nbsp;Sample APIs:&nbsp;
+
+          <button id="sampleAPI1" onClick="setCookie(prompt('Sample API Oregon', 'https://osswul9dje.execute-api.us-west-2.amazonaws.com/api/'))">Oregon</button>
+          <button id="sampleAPI2" onClick="setCookie(prompt('Sample API Ireland', 'https://mjr9wyamog.execute-api.eu-west-1.amazonaws.com/api/'))">Ireland</button>
+          <button id="sampleAPI3" onClick="setCookie(prompt('Sample API Singapore', 'https://voax9a7ub2.execute-api.ap-southeast-1.amazonaws.com/api/'))">Singapore</button>
 
       </div>
 
@@ -67,9 +70,6 @@
 <!--      </div>-->
 
 
-
-
-
       <table id="list"></table>
 
       <div id='clearPanel' onClick="clearResults()">
@@ -78,7 +78,8 @@
 
       <table id="results"></table>
 
-<!--      <div class="container">-->
+
+<!--      <div class="container" id="container">-->
 <!--        <div class="item">Region 1</div>-->
 <!--        <div class="item">Region 2</div>-->
 <!--        <div class="item">Timings</div>-->
