Adding Globalflix UI
Added Globalflix UI, added new Update route to API, enhanced README, new sample data json for table load

--- a/global-serverless/web/index.html
+++ b/global-serverless/web/index.html
@@ -46,7 +46,7 @@
           <button id="sampleAPI1" onClick="setCookie(prompt('Sample API Oregon', 'https://osswul9dje.execute-api.us-west-2.amazonaws.com/api/'))">Oregon</button>
           <button id="sampleAPI2" onClick="setCookie(prompt('Sample API Ireland', 'https://mjr9wyamog.execute-api.eu-west-1.amazonaws.com/api/'))">Ireland</button>
           <button id="sampleAPI3" onClick="setCookie(prompt('Sample API Singapore', 'https://voax9a7ub2.execute-api.ap-southeast-1.amazonaws.com/api/'))">Singapore</button>
-
+          <a href="./globalflix.html" style="float: right;"><img src="./logo.PNG?raw=true" alt="Globalflix" style="height: 32px; margin-top:-4px;"></a>
       </div>
 
 <!--      <div class="tab">-->
