global-serverless PNG to png fix

--- a/global-serverless/web/globalflix.html
+++ b/global-serverless/web/globalflix.html
@@ -31,7 +31,7 @@
     <!-- HEADER -->
     <header>
       <div class="globalflixLogo">
-        <a id="logo" href="#home"><img src="./logo.PNG?raw=true" alt="Globalflix"></a>
+        <a id="logo" href="#home"><img src="./logo.png?raw=true" alt="Globalflix"></a>
       </div>      
       <nav class="main-nav">
             
