--- a/global-serverless/web/player.html
+++ b/global-serverless/web/player.html
@@ -31,7 +31,7 @@
     <!-- HEADER -->
     <header>
       <div class="globalflixLogo">
-        <a id="logo" href="./globalflix.html"><img src="./logo.PNG?raw=true" alt="Logo Image"></a>
+        <a id="logo" href="./globalflix.html"><img src="./logo.png?raw=true" alt="Logo Image"></a>
       </div>      
       <nav class="main-nav">                     
       </nav>
