updated requirements to simplfy chalice version needed

--- a/global-serverless/web/index.html
+++ b/global-serverless/web/index.html
@@ -21,7 +21,7 @@
             if(document.getElementById('api').value.length > 0) {
                 setCookie(document.getElementById('api').value);
             } else {
-                alert('Please enter the URL for your Rest API');
+                alert('Please enter a Rest API URL');
             }
 
       }
