--- a/global-serverless/web/index.html
+++ b/global-serverless/web/index.html
@@ -43,20 +43,39 @@
 
 <!--          &nbsp;&nbsp;&nbsp;&nbsp;Sample APIs:&nbsp;-->
 
-<!--          <button id="sampleAPI1" onClick="setCookie(prompt('Sample API Oregon', 'https://osswul9dje.execute-api.us-west-2.amazonaws.com/api/'))">Oregon</button>-->
-<!--          <button id="sampleAPI2" onClick="setCookie(prompt('Sample API Ireland', 'https://mjr9wyamog.execute-api.eu-west-1.amazonaws.com/api/'))">Ireland</button>-->
-<!--          <button id="sampleAPI3" onClick="setCookie(prompt('Sample API Singapore', 'https://voax9a7ub2.execute-api.ap-southeast-1.amazonaws.com/api/'))">Singapore</button>-->
-<!--          -->
-        <a href="./globalflix.html" style="float: right;"><img src="./logo.png?raw=true" alt="Globalflix" style="height: 32px; margin-top:-4px;"></a>
+          <button id="sampleAPI1" onClick="setCookie(prompt('Sample API Oregon', 'https://osswul9dje.execute-api.us-west-2.amazonaws.com/api/'))">Oregon</button>
+          <button id="sampleAPI2" onClick="setCookie(prompt('Sample API Ireland', 'https://mjr9wyamog.execute-api.eu-west-1.amazonaws.com/api/'))">Ireland</button>
+          <button id="sampleAPI3" onClick="setCookie(prompt('Sample API Singapore', 'https://voax9a7ub2.execute-api.ap-southeast-1.amazonaws.com/api/'))">Singapore</button>
+
+        <a href="./globalflix.html" style="float: right;display:none" id="gf"><img src="./logo.png?raw=true" alt="Globalflix" style="height: 32px; margin-top:-4px;"></a>
       </div>
 
-      <table id="list"></table>
+      <table id="list" style="display:none"></table>
 
-      <div id='clearPanel' onClick="clearResults()">
-        CLEAR &nbsp;&nbsp;&nbsp; <hr class="hrc" />
-      </div>
 
-      <table id="results"></table>
+<!--      <div id='clearPanel'>-->
+<!--        RESULTS <button id="clearButton" onClick="clearResults()">clear</button>-->
+<!--      </div>-->
+
+      <table id="results" style="display:none" >
+        <thead id="resultsHead">
+
+          <tr id="resultsHeadRow">
+          </tr>
+          <tr>
+            <th style="text-align:left">
+              <button id="clearButton" onClick="clearResults()" style="display:none">clear</button>
+            </th>
+          </tr>
+
+          <tr><td>&nbsp;</td></tr>
+
+        </thead>
+        <tbody id="resultsBody">
+
+        </tbody>
+
+      </table>
 
       <table id="debug"></table>
 
