Final error handling edits

--- a/global-serverless/web/player.html
+++ b/global-serverless/web/player.html
@@ -109,6 +109,7 @@
       </div>
       <div class="code-holder severe">
         <code id="logSev"></code>
+        <code id="logSev2"></code>
       </div>
       <div class="logos">
         <a href="#"><i class="fab fa-facebook-square fa-2x logo"></i></a>
