--- a/workshops/relational-migration/webapp/index.html
+++ b/workshops/relational-migration/webapp/index.html
@@ -23,15 +23,18 @@
 <body class="indexbody" onLoad="renderNav()">
 <div class="main">
     <div class="title">
-        &nbsp;&nbsp;<a href="" target=_blank class="titlelink">Database Application</a>
+        &nbsp;&nbsp;<a href="" target=_blank class="titlelink" id="pageTitle">Database Application</a>
         <button id="setApiButton"
-                onClick="setCookie(prompt('Sample API', 'https://g4zp6m9brf.execute-api.us-east-2.amazonaws.com/api/'))">
+                onClick="setCookie(prompt('Chalice API', 'https://6yecyncte3.execute-api.us-east-2.amazonaws.com/relational/'))">
             Target API</button>
         <span id="apiTitle">
 
         </span>
         &nbsp;&nbsp;&nbsp;
-        <a href="https://github.com/robm26/migration" class="about" target="_blank">code</a>
+        <a href="https://github.com/aws-samples/aws-dynamodb-examples/tree/master/relational-migration/"
+           onclick="alert('This webapp is a test harness that performs GET & POST calls against an API. \n\nYou would first create the API using the relational-migration AWS Chalice project\n\nChalice creates a Lambda function and API Gateway endpoint. You then click \'Target API\' button to store the API URL as a cookie\n\nA working API URL is provided here, just accept the default URL and click OK.')"
+           class="about"
+           target="_blank">about</a>
         <!--        <button id="sampleAPI2" onClick="setCookie(prompt('Sample API Ireland', 'https://mjr9wyamog.execute-api.eu-west-1.amazonaws.com/api/'))">Ireland</button>-->
         <!--        <button id="sampleAPI3" onClick="setCookie(prompt('Sample API Singapore', 'https://voax9a7ub2.execute-api.ap-southeast-1.amazonaws.com/api/'))">Singapore</button>-->
 
@@ -43,6 +46,7 @@
         <input type="hidden" name="tableMetadata" id="tableMetadata"  />
         <input type="hidden" name="dataset" id="dataset"  />
         <input type="hidden" name="engine" id="engine" value="MySQL" />
+        <input type="hidden" name="stage" id="stage" value="relational" />
         <input type="hidden" name="tab" id="tab" value="CRUD" />
 
         <div style="width: 100%; display: table;" id="leftNavDivPanel">
@@ -134,14 +138,16 @@
                                 </div>
 
                                 <div class="sqlPanel" >
-                                    <span id="sampleButtons"></span>
-                                    <br/><br/>
+
                                     <button class="sqlButton" onClick="runsql()">RUN SQL</button>
                                     <button class="sqlButtonClear" onClick="clearsql()">CLEAR</button>
 
                                     <div id="log2" class="log">log2</div>
 
                                     <textarea id="sqlText" class="sqlText" >SELECT ...</textarea>
+                                    <br/>
+                                    <span id="sampleButtons"></span>
+                                    <br/><br/>
                                 </div>
                             </form>
                         </div>
