updates to add lambda to MySQL host subnet & security group

--- a/workshops/relational-migration/webapp/index.html
+++ b/workshops/relational-migration/webapp/index.html
@@ -24,7 +24,7 @@
     <div class="title">
         &nbsp;&nbsp;<a href="" target=_blank class="titlelink" id="pageTitle">Database Application</a>
         <button id="setApiButton"
-                onClick="setCookie(prompt('Chalice API', 'https://6yecyncte3.execute-api.us-east-2.amazonaws.com/relational/'))">
+                onClick="setCookie(prompt('Chalice API', ''))">
             Target API</button>
         <span id="apiTitle"></span>
         &nbsp;&nbsp;&nbsp;
