--- a/workshops/modernizr/frontend/public/index.html
+++ b/workshops/modernizr/frontend/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="ShopStore"
-      content="Your Favorite Online Shopping App"
+      name="description"
+      content="Online Shopping Store - A modern e-commerce platform for buying and selling products"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Online Shopping Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
